--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -12,7 +12,7 @@
     <div id='wrapper'>
       <div id='header'>
         <h1><a href="/">
-        		Pragmatic Rails
+        		Pragmatic Rails XD
         </a></h1>
         <h2><a href="http://blog.xdite.net">by xdite</a></h2>
       </div>
