paste first guide

--- a/_includes/featured.html
+++ b/_includes/featured.html
@@ -1,4 +1,6 @@
-<div class="repo">
-  <h3></h3>
-  <span class="desc"></span>
+<div class="topic">
+  <h3>Install Rails</h3>
+  <span class="desc">
+  	安裝在乾淨的 Mac 上
+  </span>
 </div>
