--- a/stylesheets/master.css
+++ b/stylesheets/master.css
@@ -1,24 +1,31 @@
+/* line 1, ../src/master.scss */
 body {
   font-family: Arial, sans-serif;
   background: #607480;
   color: #000000;
 }
 
-.more { font-size: 0.7em;}
+/* line 6, ../src/master.scss */
+.more {
+  font-size: 0.7em;
+}
 
-img.right { 
+/* line 9, ../src/master.scss */
+img.right {
   float: right;
   margin: 15px;
 }
 
+/* line 13, ../src/master.scss */
 a {
   color: #3E423A;
 }
-
+/* line 15, ../src/master.scss */
 a:visited {
   color: #6C6E58;
 }
 
+/* line 18, ../src/master.scss */
 #wrapper {
   width: 60em;
   margin: 2em auto 0;
@@ -29,19 +36,20 @@ a:visited {
   border-radius: 1.5em;
 }
 
+/* line 27, ../src/master.scss */
 #header {
   text-align: left;
   background: #171717;
   -moz-border-radius-topleft: 1em;
   -webkit-border-top-left-radius: 1em;
   -moz-border-radius-topright: 1em;
-  -webkit-border-top-right-radius: 1em;  
+  -webkit-border-top-right-radius: 1em;
   border-top-left-radius: 1em;
   border-top-right-radius: 1em;
   padding: 1.5em;
   text-align: center;
 }
-
+/* line 38, ../src/master.scss */
 #header h1 {
   font-size: 4em;
   display: inline;
@@ -49,17 +57,22 @@ a:visited {
   color: #fff;
   font-weight: normal;
 }
-
-#header h1 a, #header h2 a {
+/* line 44, ../src/master.scss */
+#header h1 a {
   color: inherit;
   text-decoration: none;
 }
-
-#header h1 a:hover, #header h2 a:hover {
+/* line 47, ../src/master.scss */
+#header h2 a {
+  color: inherit;
+  text-decoration: none;
+}
+/* line 50, ../src/master.scss */
+#header h1 a:hover {
   color: inherit;
   text-decoration: underline;
 }
-
+/* line 53, ../src/master.scss */
 #header h2 {
   display: inline;
   margin-left: 0.5em;
@@ -67,21 +80,27 @@ a:visited {
   font-weight: normal;
   color: #BF7F30;
 }
+/* line 54, ../src/master.scss */
+#header h2 a:hover {
+  color: inherit;
+  text-decoration: underline;
+}
 
+/* line 63, ../src/master.scss */
 #menu {
   background: #3E423A;
 }
-
+/* line 65, ../src/master.scss */
 #menu ul {
   list-style: none;
   margin: 0;
   text-align: center;
 }
-
+/* line 69, ../src/master.scss */
 #menu ul li {
   display: inline;
 }
-
+/* line 71, ../src/master.scss */
 #menu ul li a {
   color: white;
   font-size: 1.3em;
@@ -90,6 +109,7 @@ a:visited {
   font-weight: normal;
 }
 
+/* line 78, ../src/master.scss */
 #archive {
   list-style: none;
   width: 50%;
@@ -97,43 +117,45 @@ a:visited {
   padding: 0;
   font-size: 140%;
 }
-
+/* line 84, ../src/master.scss */
 #archive li {
   height: 20px;
   margin: 0;
 }
-
+/* line 87, ../src/master.scss */
 #archive a {
   float: left;
 }
-
+/* line 89, ../src/master.scss */
 #archive abbr {
   color: #666;
   float: right;
 }
 
+/* line 93, ../src/master.scss */
 #content {
   padding: 2em;
   background: #E6E0D8;
   -moz-border-radius-bottomleft: 1em;
   -webkit-border-bottom-left-radius: 1em;
   -moz-border-radius-bottomright: 1em;
-  -webkit-border-bottom-right-radius: 1em;  
+  -webkit-border-bottom-right-radius: 1em;
   border-bottom-left-radius: 1em;
   border-bottom-right-radius: 1em;
 }
-
+/* line 102, ../src/master.scss */
 #content h2 {
   margin: 0 0 0.5em 0;
   color: black;
   font-size: 1.5em;
 }
-
+/* line 106, ../src/master.scss */
 #content p {
   line-height: 140%;
   letter-spacing: -0.03em;
 }
 
+/* line 110, ../src/master.scss */
 .date {
   padding: 0.4em 0.6em 0.3em;
   font-weight: bold;
@@ -142,16 +164,20 @@ a:visited {
   color: #000;
 }
 
+/* line 117, ../src/master.scss */
 div.post {
   margin-bottom: 2em;
 }
 
+/* line 120, ../src/master.scss */
+.post {
+  color: #333;
+}
+/* line 121, ../src/master.scss */
 .post h1 {
   margin-top: 0.2em;
 }
-
-.post { color: #333; }
-
+/* line 123, ../src/master.scss */
 .post h1 a {
   text-decoration: none;
   clear: left;
@@ -162,9 +188,12 @@ div.post {
   border-bottom: 1px dashed #dba;
   font-weight: bold;
 }
+/* line 133, ../src/master.scss */
+.post br {
+  margin-bottom: 10px;
+}
 
-.post br { margin-bottom: 10px;}
-
+/* line 136, ../src/master.scss */
 pre {
   background: #f8f8f8;
   border: 1px solid #E7E5DC;
@@ -178,33 +207,36 @@ pre {
   letter-spacing: 0;
 }
 
+/* line 148, ../src/master.scss */
 table.post-list {
   width: 100%;
   border-collapse: collapse;
 }
-
+/* line 151, ../src/master.scss */
 table.post-list a {
   color: #262;
   font-weight: bold;
 }
-
+/* line 154, ../src/master.scss */
 table.post-list th {
   text-align: left;
 }
-
+/* line 156, ../src/master.scss */
 table.post-list td, table.post-list th {
   padding: 0.5em 0.3em;
   border-bottom: 1px solid #dba;
 }
-
+/* line 160, ../src/master.scss */
 table.post-list tr:last-child td, table.post-list tr:last-child th {
   border-bottom: 0;
 }
 
+/* line 163, ../src/master.scss */
 div.related {
   margin-bottom: 2em;
 }
 
+/* line 166, ../src/master.scss */
 #footer {
   margin: 0 auto 2em;
   color: #3E423A;
@@ -214,10 +246,12 @@ div.related {
   width: 56em;
 }
 
+/* line 174, ../src/master.scss */
 .home_box {
   float: left;
 }
 
+/* line 177, ../src/master.scss */
 #content .home_box h2 {
   background: #171717;
   padding: 0.3em 0.5em;
@@ -226,32 +260,41 @@ div.related {
   color: white;
 }
 
+/* line 184, ../src/master.scss */
 .home_box h2 a {
   color: white;
   margin: 0 0.2em;
 }
 
+/* line 188, ../src/master.scss */
 #home_left {
   width: 41em;
 }
 
+/* line 191, ../src/master.scss */
 #home_right {
   width: 14em;
   margin-left: 1em;
 }
 
-.clearfix { clear: both;}
+/* line 195, ../src/master.scss */
+.clearfix {
+  clear: both;
+}
 
+/* line 198, ../src/master.scss */
 #footer a {
   color: #3E423A;
   font-weight: normal;
 }
 
+/* line 202, ../src/master.scss */
 .home_box .post h1 a {
   font-size: 0.7em;
 }
 
-.repo {
+/* line 205, ../src/master.scss */
+.topic {
   background: #FAD8AF;
   border: 2px solid #B89F80;
   padding: 0.7em 1em;
@@ -262,16 +305,19 @@ div.related {
   -webkit-border-radius: 0.5em;
   border-radius: 0.5em;
 }
-.repo h3 {
+/* line 215, ../src/master.scss */
+.topic h3 {
   margin: 0 0 0.3em 0;
 }
-.repo h3 a {
+/* line 217, ../src/master.scss */
+.topic h3 a {
   font-weight: bold;
   color: black;
   letter-spacing: 0;
   font-size: 1.1em;
 }
 
+/* line 223, ../src/master.scss */
 #github-projects.big .repo {
   float: left;
   width: 25.2em;
@@ -281,7 +327,17 @@ div.related {
   vertical-align: top;
 }
 
-.float-left { float: left; }
-.float-right { float: right; }
+/* line 231, ../src/master.scss */
+.float-left {
+  float: left;
+}
 
-a img { border: 0; }
+/* line 234, ../src/master.scss */
+.float-right {
+  float: right;
+}
+
+/* line 237, ../src/master.scss */
+a img {
+  border: 0;
+}
