--- a/src/master.scss
+++ b/src/master.scss
@@ -1,137 +1,145 @@
 body {
-  font-family: Arial, sans-serif;
-  background: #607480;
-  color: #000000; }
+   font-family: Arial, sans-serif;
+   background: #607480;
+   color: #000000; 
+}
 
-.more {
-  font-size: 0.7em; }
-
-img.right {
-  float: right;
-  margin: 15px; }
+/* self clear */
+div:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
 
 a {
   color: #3E423A;
-  &:visited {
-    color: #6C6E58; } }
+  &:visited {color: #6C6E58; } 
+}
 
-#wrapper {
-  width: 60em;
-  margin: 2em auto 0;
-  padding: 0;
-  background: #fff;
-  -moz-border-radius: 1.5em;
-  -webkit-border-radius: 1.5em;
-  border-radius: 1.5em; }
+.more {
+  font-size: 0.7em; }
+    
+#container{
+   width: 60em;
+   margin: 2em auto 0;
+   padding: 0;
+   background: #fff;
+   -moz-border-radius: 1.5em;
+   -webkit-border-radius: 1.5em;
+   border-radius: 1.5em; 
+}
 
-#header {
-  text-align: left;
-  background: #171717;
-  -moz-border-radius-topleft: 1em;
-  -webkit-border-top-left-radius: 1em;
-  -moz-border-radius-topright: 1em;
-  -webkit-border-top-right-radius: 1em;
-  border-top-left-radius: 1em;
-  border-top-right-radius: 1em;
-  padding: 1.5em;
-  text-align: center;
-  h1 {
-    font-size: 4em;
-    display: inline;
-    letter-spacing: -0.08em;
-    color: #fff;
-    font-weight: normal;
-    a {
-      color: inherit;
-      text-decoration: none; } }
-  h2 a {
-    color: inherit;
-    text-decoration: none; }
-  h1 a:hover {
-    color: inherit;
-    text-decoration: underline; }
-  h2 {
-    a:hover {
-      color: inherit;
-      text-decoration: underline; }
-    display: inline;
-    margin-left: 0.5em;
-    font-size: 2em;
-    font-weight: normal;
-    color: #BF7F30; } }
+#header{
+   text-align: left;
+   background: #171717;
+   -moz-border-radius-topleft: 1em;
+   -webkit-border-top-left-radius: 1em;
+   -moz-border-radius-topright: 1em;
+   -webkit-border-top-right-radius: 1em;
+   border-top-left-radius: 1em;
+   border-top-right-radius: 1em;
+   padding: 1.5em;
+   text-align: center;
+   h1 {
+     font-size: 4em;
+     display: inline;
+     letter-spacing: -0.08em;
+     color: #fff;
+     font-weight: normal;
+     a {
+       color: inherit;
+       text-decoration: none; } 
+       &:hover {text-decoration: underline;}
+     }
+     h2 {
+         a{
+            color: #BF7F30;
+            text-decoration: none; 
+            &:hover {
+               text-decoration: underline; 
+            }
+         }    
+         display: inline;
+         margin-left: 0.5em;
+         font-size: 2em;
+         font-weight: normal;
+     } 
 
-#menu {
-  background: #3E423A;
-  ul {
-    list-style: none;
-    margin: 0;
-    text-align: center;
-    li {
-      display: inline;
-      a {
-        color: white;
-        font-size: 1.3em;
-        padding: 0 0.5em;
-        line-height: 2.5em;
-        font-weight: normal; } } } }
+}
 
-#archive {
-  list-style: none;
-  width: 50%;
-  margin: 0 auto;
-  padding: 0;
-  font-size: 140%;
-  li {
-    height: 20px;
-    margin: 0; }
-  a {
-    float: left; }
-  abbr {
-    color: #666;
-    float: right; } }
 
 #content {
-  padding: 2em;
-  background: #E6E0D8;
-  -moz-border-radius-bottomleft: 1em;
-  -webkit-border-bottom-left-radius: 1em;
-  -moz-border-radius-bottomright: 1em;
-  -webkit-border-bottom-right-radius: 1em;
-  border-bottom-left-radius: 1em;
-  border-bottom-right-radius: 1em;
-  h2 {
-    margin: 0 0 0.5em 0;
-    color: black;
-    font-size: 1.5em; }
-  p {
-    line-height: 140%;
-    letter-spacing: -0.03em; } }
+   padding: 2em;
+   background: #E6E0D8;
+   -moz-border-radius-bottomleft: 1em;
+   -webkit-border-bottom-left-radius: 1em;
+   -moz-border-radius-bottomright: 1em;
+   -webkit-border-bottom-right-radius: 1em;
+   border-bottom-left-radius: 1em;
+   border-bottom-right-radius: 1em;
 
-.date {
-  padding: 0.4em 0.6em 0.3em;
-  font-weight: bold;
-  color: white;
-  text-align: center;
-  color: #000; }
+}
 
-div.post {
-  margin-bottom: 2em; }
+
+#main{
+
+   float:left;
+   width: 40em;
+}
+
+#sidebar{
+   margin-left: 1em;
+   background: #E6E0D8;
+   float:left;
+   width: 15em;
+}
+
 
 .post {
-  h1 {
-    margin-top: 0.2em;
-    a {
-      text-decoration: none;
-      clear: left;
+   h1{ 
+      margin-top: 0.2em;
+      margin-bottom: 0.67em;
+      font-size: 2em;
       display: block;
-      color: black;
-      padding: 0.3em 0;
-      margin: 0 0 0.2em 0;
-      border-bottom: 1px dashed #dba;
-      font-weight: bold; } }
-  color: #333;
-  br {
-    margin-bottom: 10px; } }
+      a{
+         color: inherit;
+         text-decoration: none;
+         clear: left;
+         display: block;
+         color: black;
+         padding: 0.3em 0;
+         margin: 0 0 0.2em 0;
+         border-bottom: 1px dashed #dba;
+         font-weight: bold; 
+      }
+   }
+   h2{
+      margin-top: 0.83em;
+      margin-bottom: 0.83em;
+
+   }
+   
+   h3{
+      font-size: 1.17em;
+      margin-top: 1em;
+      margin-bottom: 1em;
+   }
+   
+   ul{
+      margin-top: 1em;
+      margin-bottom: 1em;
+      li{
+         margin-top: 1em;
+         margin-bottom: 1em;
+      }
+   }
+}
+
+.title {
+   background: #171717;
+   padding: 0.3em 0.5em;
+   border-bottom: 3px solid #D4D4D4;
+   margin-bottom: 0em;
+   color: white; 
+   a{ color: inherit; }
+   font-size: 1.5em;
+}
 
 pre {
   background: #f8f8f8;
@@ -143,64 +151,9 @@ pre {
   line-height: 120%;
   font-family: "Consolas","Courier New",Courier,mono;
   font-size: 12px;
-  letter-spacing: 0; }
-
-table.post-list {
-  width: 100%;
-  border-collapse: collapse;
-  a {
-    color: #262;
-    font-weight: bold; }
-  th {
-    text-align: left; }
-  td, th {
-    padding: 0.5em 0.3em;
-    border-bottom: 1px solid #dba; }
-  tr:last-child {
-    td, th {
-      border-bottom: 0; } } }
-
-div.related {
-  margin-bottom: 2em; }
-
-#footer {
-  margin: 0 auto 2em;
-  color: #3E423A;
-  font-size: 0.9em;
-  padding: 0.5em 0;
-  text-align: center;
-  width: 56em; }
-
-.home_box {
-  float: left; }
-
-#content .home_box h2 {
-  background: #171717;
-  padding: 0.3em 0.5em;
-  border-bottom: 3px solid #D4D4D4;
-  margin-bottom: 0em;
-  color: white; }
-
-.home_box h2 a {
-  color: white;
-  margin: 0 0.2em; }
-
-#home_left {
-  width: 41em; }
-
-#home_right {
-  width: 14em;
-  margin-left: 1em; }
-
-.clearfix {
-  clear: both; }
-
-#footer a {
-  color: #3E423A;
-  font-weight: normal; }
-
-.home_box .post h1 a {
-  font-size: 0.7em; }
+  letter-spacing: 0; 
+  margin: 1em 0px;
+}
 
 .topic {
   background: #FAD8AF;
@@ -215,24 +168,12 @@ div.related {
   h3 {
     margin: 0 0 0.3em 0;
     a {
-      font-weight: bold;
-      color: black;
-      letter-spacing: 0;
-      font-size: 1.1em; } } }
+        font-weight: bold;
+        color: black;
+        letter-spacing: 0;
+        font-size: 1.1em;
+      }
+  }  
+}
 
-#github-projects.big .repo {
-  float: left;
-  width: 25.2em;
-  margin: 1.2em 1em 0 0;
-  display: inline-block;
-  float: none;
-  vertical-align: top; }
 
-.float-left {
-  float: left; }
-
-.float-right {
-  float: right; }
-
-a img {
-  border: 0; }
