--- a/stylesheets/master.css
+++ b/stylesheets/master.css
@@ -5,28 +5,32 @@ body {
   color: #000000;
 }
 
-/* line 6, ../src/master.scss */
-.more {
-  font-size: 0.7em;
+/* self clear */
+/* line 8, ../src/master.scss */
+div:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
 }
 
-/* line 9, ../src/master.scss */
-img.right {
-  float: right;
-  margin: 15px;
-}
-
-/* line 13, ../src/master.scss */
+/* line 10, ../src/master.scss */
 a {
   color: #3E423A;
 }
-/* line 15, ../src/master.scss */
+/* line 12, ../src/master.scss */
 a:visited {
   color: #6C6E58;
 }
 
+/* line 15, ../src/master.scss */
+.more {
+  font-size: 0.7em;
+}
+
 /* line 18, ../src/master.scss */
-#wrapper {
+#container {
   width: 60em;
   margin: 2em auto 0;
   padding: 0;
@@ -36,7 +40,7 @@ a:visited {
   border-radius: 1.5em;
 }
 
-/* line 27, ../src/master.scss */
+/* line 28, ../src/master.scss */
 #header {
   text-align: left;
   background: #171717;
@@ -49,7 +53,7 @@ a:visited {
   padding: 1.5em;
   text-align: center;
 }
-/* line 38, ../src/master.scss */
+/* line 39, ../src/master.scss */
 #header h1 {
   font-size: 4em;
   display: inline;
@@ -57,82 +61,33 @@ a:visited {
   color: #fff;
   font-weight: normal;
 }
-/* line 44, ../src/master.scss */
+/* line 45, ../src/master.scss */
 #header h1 a {
   color: inherit;
   text-decoration: none;
 }
-/* line 47, ../src/master.scss */
-#header h2 a {
-  color: inherit;
-  text-decoration: none;
-}
-/* line 50, ../src/master.scss */
-#header h1 a:hover {
-  color: inherit;
+/* line 48, ../src/master.scss */
+#header h1:hover {
   text-decoration: underline;
 }
-/* line 53, ../src/master.scss */
+/* line 50, ../src/master.scss */
 #header h2 {
   display: inline;
   margin-left: 0.5em;
   font-size: 2em;
   font-weight: normal;
+}
+/* line 51, ../src/master.scss */
+#header h2 a {
   color: #BF7F30;
+  text-decoration: none;
 }
 /* line 54, ../src/master.scss */
 #header h2 a:hover {
-  color: inherit;
   text-decoration: underline;
 }
 
-/* line 63, ../src/master.scss */
-#menu {
-  background: #3E423A;
-}
-/* line 65, ../src/master.scss */
-#menu ul {
-  list-style: none;
-  margin: 0;
-  text-align: center;
-}
-/* line 69, ../src/master.scss */
-#menu ul li {
-  display: inline;
-}
-/* line 71, ../src/master.scss */
-#menu ul li a {
-  color: white;
-  font-size: 1.3em;
-  padding: 0 0.5em;
-  line-height: 2.5em;
-  font-weight: normal;
-}
-
-/* line 78, ../src/master.scss */
-#archive {
-  list-style: none;
-  width: 50%;
-  margin: 0 auto;
-  padding: 0;
-  font-size: 140%;
-}
-/* line 84, ../src/master.scss */
-#archive li {
-  height: 20px;
-  margin: 0;
-}
-/* line 87, ../src/master.scss */
-#archive a {
-  float: left;
-}
-/* line 89, ../src/master.scss */
-#archive abbr {
-  color: #666;
-  float: right;
-}
-
-/* line 93, ../src/master.scss */
+/* line 67, ../src/master.scss */
 #content {
   padding: 2em;
   background: #E6E0D8;
@@ -143,42 +98,31 @@ a:visited {
   border-bottom-left-radius: 1em;
   border-bottom-right-radius: 1em;
 }
-/* line 102, ../src/master.scss */
-#content h2 {
-  margin: 0 0 0.5em 0;
-  color: black;
-  font-size: 1.5em;
-}
-/* line 106, ../src/master.scss */
-#content p {
-  line-height: 140%;
-  letter-spacing: -0.03em;
+
+/* line 80, ../src/master.scss */
+#main {
+  float: left;
+  width: 40em;
 }
 
-/* line 110, ../src/master.scss */
-.date {
-  padding: 0.4em 0.6em 0.3em;
-  font-weight: bold;
-  color: white;
-  text-align: center;
-  color: #000;
+/* line 86, ../src/master.scss */
+#sidebar {
+  margin-left: 1em;
+  background: #E6E0D8;
+  float: left;
+  width: 15em;
 }
 
-/* line 117, ../src/master.scss */
-div.post {
-  margin-bottom: 2em;
-}
-
-/* line 120, ../src/master.scss */
-.post {
-  color: #333;
-}
-/* line 121, ../src/master.scss */
+/* line 95, ../src/master.scss */
 .post h1 {
   margin-top: 0.2em;
+  margin-bottom: 0.67em;
+  font-size: 2em;
+  display: block;
 }
-/* line 123, ../src/master.scss */
+/* line 100, ../src/master.scss */
 .post h1 a {
+  color: inherit;
   text-decoration: none;
   clear: left;
   display: block;
@@ -188,12 +132,50 @@ div.post {
   border-bottom: 1px dashed #dba;
   font-weight: bold;
 }
+/* line 112, ../src/master.scss */
+.post h2 {
+  margin-top: 0.83em;
+  margin-bottom: 0.83em;
+}
+/* line 118, ../src/master.scss */
+.post h3 {
+  font-size: 1.17em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+/* line 124, ../src/master.scss */
+.post ul {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+/* line 127, ../src/master.scss */
+.post ul li {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
 /* line 133, ../src/master.scss */
-.post br {
-  margin-bottom: 10px;
+.post p {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  line-height: 140%;
+  letter-spacing: -0.03em;
 }
 
-/* line 136, ../src/master.scss */
+/* line 141, ../src/master.scss */
+.title {
+  background: #171717;
+  padding: 0.3em 0.5em;
+  border-bottom: 3px solid #D4D4D4;
+  margin-bottom: 0em;
+  color: white;
+  font-size: 1.5em;
+}
+/* line 147, ../src/master.scss */
+.title a {
+  color: inherit;
+}
+
+/* line 151, ../src/master.scss */
 pre {
   background: #f8f8f8;
   border: 1px solid #E7E5DC;
@@ -205,95 +187,10 @@ pre {
   font-family: "Consolas","Courier New",Courier,mono;
   font-size: 12px;
   letter-spacing: 0;
+  margin: 1em 0px;
 }
 
-/* line 148, ../src/master.scss */
-table.post-list {
-  width: 100%;
-  border-collapse: collapse;
-}
-/* line 151, ../src/master.scss */
-table.post-list a {
-  color: #262;
-  font-weight: bold;
-}
-/* line 154, ../src/master.scss */
-table.post-list th {
-  text-align: left;
-}
-/* line 156, ../src/master.scss */
-table.post-list td, table.post-list th {
-  padding: 0.5em 0.3em;
-  border-bottom: 1px solid #dba;
-}
-/* line 160, ../src/master.scss */
-table.post-list tr:last-child td, table.post-list tr:last-child th {
-  border-bottom: 0;
-}
-
-/* line 163, ../src/master.scss */
-div.related {
-  margin-bottom: 2em;
-}
-
-/* line 166, ../src/master.scss */
-#footer {
-  margin: 0 auto 2em;
-  color: #3E423A;
-  font-size: 0.9em;
-  padding: 0.5em 0;
-  text-align: center;
-  width: 56em;
-}
-
-/* line 174, ../src/master.scss */
-.home_box {
-  float: left;
-}
-
-/* line 177, ../src/master.scss */
-#content .home_box h2 {
-  background: #171717;
-  padding: 0.3em 0.5em;
-  border-bottom: 3px solid #D4D4D4;
-  margin-bottom: 0em;
-  color: white;
-}
-
-/* line 184, ../src/master.scss */
-.home_box h2 a {
-  color: white;
-  margin: 0 0.2em;
-}
-
-/* line 188, ../src/master.scss */
-#home_left {
-  width: 41em;
-}
-
-/* line 191, ../src/master.scss */
-#home_right {
-  width: 14em;
-  margin-left: 1em;
-}
-
-/* line 195, ../src/master.scss */
-.clearfix {
-  clear: both;
-}
-
-/* line 198, ../src/master.scss */
-#footer a {
-  color: #3E423A;
-  font-weight: normal;
-}
-
-/* line 202, ../src/master.scss */
-.home_box .post h1 a {
-  font-size: 0.7em;
-}
-
-/* line 205, ../src/master.scss */
+/* line 165, ../src/master.scss */
 .topic {
   background: #FAD8AF;
   border: 2px solid #B89F80;
@@ -305,11 +202,11 @@ div.related {
   -webkit-border-radius: 0.5em;
   border-radius: 0.5em;
 }
-/* line 215, ../src/master.scss */
+/* line 175, ../src/master.scss */
 .topic h3 {
   margin: 0 0 0.3em 0;
 }
-/* line 217, ../src/master.scss */
+/* line 177, ../src/master.scss */
 .topic h3 a {
   font-weight: bold;
   color: black;
@@ -317,27 +214,17 @@ div.related {
   font-size: 1.1em;
 }
 
-/* line 223, ../src/master.scss */
-#github-projects.big .repo {
-  float: left;
-  width: 25.2em;
-  margin: 1.2em 1em 0 0;
-  display: inline-block;
-  float: none;
-  vertical-align: top;
+/* line 186, ../src/master.scss */
+#footer {
+  margin: 0 auto 2em;
+  color: #3E423A;
+  font-size: 0.9em;
+  padding: 0.5em 0;
+  text-align: center;
+  width: 56em;
 }
-
-/* line 231, ../src/master.scss */
-.float-left {
-  float: left;
-}
-
-/* line 234, ../src/master.scss */
-.float-right {
-  float: right;
-}
-
-/* line 237, ../src/master.scss */
-a img {
-  border: 0;
+/* line 193, ../src/master.scss */
+#footer a {
+  color: #3E423A;
+  font-weight: normal;
 }
