--- a/src/master.scss
+++ b/src/master.scss
@@ -136,6 +136,13 @@ a {
      line-height: 140%;
      letter-spacing: -0.03em;
    }
+   .date {
+     padding: 0.4em 0.6em 0.3em;
+     font-weight: bold;
+     color: white;
+     text-align: right;
+     color: #000;
+   }
 }
 
 .title {
