--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title> Pragmatic Rails - {{ page.title }}</title>
- 
+     <link rel="stylesheet" href="/stylesheets/reset.css" type="text/css" media="screen" charset="utf-8"/>
     <link rel="stylesheet" href="/stylesheets/master.css" type="text/css" media="screen" charset="utf-8"/>
     <link rel="alternate" type="application/atom+xml" href="/atom.xml" />
 </head>
