--- a/stylesheets/master.css
+++ b/stylesheets/master.css
@@ -1,4 +1,4 @@
-/* line 1, ../src/master.scss */
+/* line 2, ../src/master.scss */
 body {
   font-family: Arial, sans-serif;
   background: #607480;
@@ -6,7 +6,7 @@ body {
 }
 
 /* self clear */
-/* line 8, ../src/master.scss */
+/* line 9, ../src/master.scss */
 div:after {
   content: ".";
   display: block;
@@ -15,28 +15,28 @@ div:after {
   visibility: hidden;
 }
 
-/* line 10, ../src/master.scss */
+/* line 11, ../src/master.scss */
 a {
   color: #3E423A;
 }
-/* line 12, ../src/master.scss */
+/* line 13, ../src/master.scss */
 a:visited {
   color: #6C6E58;
 }
 
-/* line 15, ../src/master.scss */
+/* line 16, ../src/master.scss */
 ol {
   display: block;
   list-style-type: decimal;
   padding-left: 40px;
 }
 
-/* line 21, ../src/master.scss */
+/* line 23, ../src/master.scss */
 .more {
   font-size: 0.7em;
 }
 
-/* line 24, ../src/master.scss */
+/* line 26, ../src/master.scss */
 #container {
   width: 60em;
   margin: 2em auto 0;
@@ -47,7 +47,7 @@ ol {
   border-radius: 1.5em;
 }
 
-/* line 34, ../src/master.scss */
+/* line 36, ../src/master.scss */
 #header {
   text-align: left;
   background: #171717;
@@ -60,7 +60,7 @@ ol {
   padding: 1.5em;
   text-align: center;
 }
-/* line 45, ../src/master.scss */
+/* line 47, ../src/master.scss */
 #header h1 {
   font-size: 4em;
   display: inline;
@@ -68,33 +68,33 @@ ol {
   color: #fff;
   font-weight: normal;
 }
-/* line 51, ../src/master.scss */
+/* line 53, ../src/master.scss */
 #header h1 a {
   color: inherit;
   text-decoration: none;
 }
-/* line 54, ../src/master.scss */
+/* line 56, ../src/master.scss */
 #header h1:hover {
   text-decoration: underline;
 }
-/* line 56, ../src/master.scss */
+/* line 58, ../src/master.scss */
 #header h2 {
   display: inline;
   margin-left: 0.5em;
   font-size: 2em;
   font-weight: normal;
 }
-/* line 57, ../src/master.scss */
+/* line 59, ../src/master.scss */
 #header h2 a {
   color: #BF7F30;
   text-decoration: none;
 }
-/* line 60, ../src/master.scss */
+/* line 62, ../src/master.scss */
 #header h2 a:hover {
   text-decoration: underline;
 }
 
-/* line 73, ../src/master.scss */
+/* line 75, ../src/master.scss */
 #content {
   padding: 2em;
   background: #E6E0D8;
@@ -106,13 +106,13 @@ ol {
   border-bottom-right-radius: 1em;
 }
 
-/* line 86, ../src/master.scss */
+/* line 88, ../src/master.scss */
 #main {
   float: left;
   width: 40em;
 }
 
-/* line 92, ../src/master.scss */
+/* line 94, ../src/master.scss */
 #sidebar {
   margin-left: 1em;
   background: #E6E0D8;
@@ -120,14 +120,14 @@ ol {
   width: 15em;
 }
 
-/* line 101, ../src/master.scss */
+/* line 103, ../src/master.scss */
 .post h1 {
   margin-top: 0.2em;
   margin-bottom: 0.67em;
   font-size: 2em;
   display: block;
 }
-/* line 106, ../src/master.scss */
+/* line 108, ../src/master.scss */
 .post h1 a {
   color: inherit;
   text-decoration: none;
@@ -139,36 +139,36 @@ ol {
   border-bottom: 1px dashed #dba;
   font-weight: bold;
 }
-/* line 118, ../src/master.scss */
+/* line 120, ../src/master.scss */
 .post h2 {
   font-size: 1.5em;
   margin-top: 0.83em;
   margin-bottom: 0.83em;
 }
-/* line 125, ../src/master.scss */
+/* line 127, ../src/master.scss */
 .post h3 {
   font-size: 1.17em;
   margin-top: 1em;
   margin-bottom: 1em;
 }
-/* line 131, ../src/master.scss */
+/* line 133, ../src/master.scss */
 .post ul {
   margin-top: 1em;
   margin-bottom: 1em;
 }
-/* line 134, ../src/master.scss */
+/* line 136, ../src/master.scss */
 .post ul li {
   margin-top: 1em;
   margin-bottom: 1em;
 }
-/* line 140, ../src/master.scss */
+/* line 142, ../src/master.scss */
 .post p {
   margin-top: 1em;
   margin-bottom: 1em;
   line-height: 140%;
   letter-spacing: -0.03em;
 }
-/* line 146, ../src/master.scss */
+/* line 148, ../src/master.scss */
 .post .date {
   padding: 0.4em 0.6em 0.3em;
   font-weight: bold;
@@ -177,7 +177,7 @@ ol {
   color: #000;
 }
 
-/* line 155, ../src/master.scss */
+/* line 160, ../src/master.scss */
 .title {
   background: #171717;
   padding: 0.3em 0.5em;
@@ -186,12 +186,12 @@ ol {
   color: white;
   font-size: 1.5em;
 }
-/* line 161, ../src/master.scss */
+/* line 166, ../src/master.scss */
 .title a {
   color: inherit;
 }
 
-/* line 165, ../src/master.scss */
+/* line 170, ../src/master.scss */
 pre {
   background: #f8f8f8;
   border: 1px solid #E7E5DC;
@@ -206,7 +206,7 @@ pre {
   margin: 1em 0px;
 }
 
-/* line 179, ../src/master.scss */
+/* line 184, ../src/master.scss */
 .topic {
   background: #FAD8AF;
   border: 2px solid #B89F80;
@@ -218,11 +218,11 @@ pre {
   -webkit-border-radius: 0.5em;
   border-radius: 0.5em;
 }
-/* line 189, ../src/master.scss */
+/* line 194, ../src/master.scss */
 .topic h3 {
   margin: 0 0 0.3em 0;
 }
-/* line 191, ../src/master.scss */
+/* line 196, ../src/master.scss */
 .topic h3 a {
   font-weight: bold;
   color: black;
@@ -230,7 +230,7 @@ pre {
   font-size: 1.1em;
 }
 
-/* line 200, ../src/master.scss */
+/* line 205, ../src/master.scss */
 #footer {
   margin: 0 auto 2em;
   color: #3E423A;
@@ -239,8 +239,25 @@ pre {
   text-align: center;
   width: 56em;
 }
-/* line 207, ../src/master.scss */
+/* line 212, ../src/master.scss */
 #footer a {
   color: #3E423A;
   font-weight: normal;
+}
+
+/* line 218, ../src/master.scss */
+.warning {
+  background: #f9d9d8 url(/stylesheets/images/tab_red.gif) no-repeat left top;
+  border: none;
+  padding: 1.25em 1.25em 1.25em 48px;
+  margin-left: 0;
+  margin-top: 0.25em;
+}
+
+/* line 226, ../src/master.scss */
+.info {
+  background: #d5e9f6 url(/stylesheets/images/tab_info.gif) no-repeat left top;
+  border: none;
+  padding: 1em 1em 0.25em 48px;
+  margin: 0.25em 0 1.5em 0;
 }
