新增加 maruku support 與 table css

--- a/_pragmatic-rails/pragmatic-rails/src/master.scss
+++ b/_pragmatic-rails/pragmatic-rails/src/master.scss
@@ -1,3 +1,4 @@
+@import "compass/utilities/tables/borders";
 body {
    font-family: Arial, sans-serif;
    background: #607480;
@@ -16,26 +17,6 @@ ol {
    display: block;
    list-style-type: decimal;
    padding-left: 40px;
-}
-
-table {
-    margin: 0 0 1.5em;
-    border: 2px solid #CCC;
-    background: #FFF;
-    border-collapse: collapse;
-}
-
-table th, table td {
-    padding: 0.25em 1em;
-    border: 1px solid #CCC;
-    border-collapse: collapse;
-}
-
-table th {
-    border-bottom: 2px solid #CCC;
-    background: #EEE;
-    font-weight: bold;
-    padding: 0.5em 1em;
 }
 
 
